--- a/build.gradle
+++ b/build.gradle
@@ -30,23 +30,27 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     // spock
-    testImplementation('org.spockframework:spock-core:2.1-groovy-3.0')
-    testImplementation('org.spockframework:spock-spring:2.1-groovy-3.0')
+    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
+    testImplementation 'org.spockframework:spock-spring:2.3-groovy-3.0'
 
     // 런타임에 클래스 기반 spock mock을 만들기 위해서 필요
-    testImplementation('net.bytebuddy:byte-buddy:1.12.10')
+    testImplementation 'net.bytebuddy:byte-buddy:1.12.10'
 
-    // testcontianers
-    testImplementation('org.testcontainers:spock:1.17.1')
-    testImplementation('org.testcontainers:mariadb:1.17.1')
+    // testcontainers
+    testImplementation 'org.testcontainers:spock:1.17.1'
+    testImplementation 'org.testcontainers:mariadb:1.17.1'
+    testImplementation 'org.testcontainers:junit-jupiter:1.17.1'
+
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
 
-bootJar{
-    archiveFileName='pharmacy.jar'
+bootJar {
+    archiveFileName = 'pharmacy.jar'
 }
